# react-docx

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  tmp-image2.wmf  tsconfig.base.json  tsconfig.json  vitest.config.ts
.cargo/: config.toml
.changeset/: README.md  config.json  word-fidelity-editor.md
.githooks/: pre-commit
.github/workflows/: publish.yml  test.yml  word-differential.yml
apps/playground/: CHANGELOG.md  components.json  index.html  package.json  tsconfig.json  vite.config.ts
crates/docx-core/: Cargo.toml
crates/docx-wasm/: Cargo.toml
crates/docx-wasm/src/: lib.rs
docs/: editor-architecture.md  text-surface-migration.md  word-fidelity-harness.md
repros/: signature-block-variants.docx  tab-stop-column-wrap.docx
scripts/: .measure-overlap-tmp.mjs  .perf-scroll-tmp.mjs  dev-playground.mjs  measure_png_visual_diff.py  verify-doc-fidelity-corpus.mjs  verify-docx-fidelity-corpus.mjs
scripts/word-oracle/: capture-viewer-pages.mjs  compare-pages.mjs  comparison-contract.mjs  contract.mjs  edit-action-contract.mjs  edit-actions.schema.json  font-fingerprint.mjs  manifest.schema.json  materialize-references.mjs  record-reference.mjs  requirements.txt  run-edit-roundtrip.mjs  validate-manifest.mjs  viewer-capture-contract.mjs
tests/fidelity/: edit-action-contract.test.mjs  font-fingerprint.test.mjs  viewer-capture-contract.test.mjs  word-oracle-comparison.test.mjs  word-oracle-contract.test.mjs
tests/helpers/: docx-regression.ts
tests/reference/: ts-doc-model-legacy.ts  (+2 more)
(+212 files in other folders)
