[workspace]
members = ["crates/docx-core", "crates/docx-wasm"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
miniz_oxide = "0.8"

# Size-optimized release profile: the wasm binary ships inside the npm package.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
